_sass/page.scss
/* ==========================================================================
   Page layout
   ========================================================================== */

body {
	background-color: $bodycolor;
	font-family: $base-font;
	color: $text-color;
}

/* 
   Header
   ========================================================================== */

.navigation-wrapper {
	@include container;
	padding: 2em 0 1em;
	font-family: $heading-font;
	font-weight: 700;
	text-transform: uppercase;
	@include clearfix;
}

/* Site name */
.site-name {
	@include grid(12,10);
	@include prefix(12,1);
	@include suffix(12,1);
	margin-bottom: 1em;
	float: none;
	display: block;
	@include font-rem(24);
	@media #{$small} {
		@include grid(12,2);
		@include prefix(12,0.5);
		@include suffix(12,0.5);
		@include font-rem(16);
	}
	@media #{$x-large} {
		@include grid(12,1.5);
		@include prefix(12,2);
	}
}

/* Top navigation links */
.top-navigation {
	@include grid(12,10);
	@include prefix(12,1);
	@include suffix(12,1);
	margin-bottom: 1em;
	float: none;
	display: block;
	@media #{$small} {
		@include grid(12,9);
		@include prefix(12,0);
		@include suffix(12,0);
	}
	@media #{$x-large} {
		@include grid(12,8);
	}
	ul {
		margin: 0;
		padding: 0;
		clear: both;
		list-style-type: none;
	}
	li {
		display: block;
		list-style-type: none;
		border-bottom: 1px solid lighten($black,80);
		border-bottom: 1px solid fade($black,10);
		@include font-rem(16);
		&:last-child {
			border-bottom: 0 solid transparent;
		}
		@media #{$small} {
			display: inline;
			margin-right: 25px;
			white-space: nowrap;
			border-bottom: 0 solid transparent;
		}
		a { 
			display: block;
			padding: 10px 0;
			decoration: none;
			border-bottom: 0 solid transparent;
			@include transition(all .2s);
			@media #{$small} {
				display: inline;
				padding: 0;
			}
		}
	}
}

/* Animated lines for mobile nav button */
$button-size: 1.5rem;
@mixin navicon-line() {
	display: inline-block;
	width: $button-size;
	height: $button-size/7;
	// line color
	background: $white;
	border-radius: $button-size/14;
	transition: .3s;
}
.navicon-lines-button {
	padding: $button-size/4 $button-size/2;
	transition: .3s;
	cursor: pointer;
	user-select: none;
	border-radius: $button-size/7;
}
.navicon-lines-button:hover {
	opacity: 1;
}
.navicon-lines-button:active {
	transition: 0;
}
.navicon-lines {
	margin-right: 10px;
	margin-bottom: $button-size/5;
	// create middle line
	@include navicon-line;
	position: relative;
	// create the upper and lower lines as pseudo-elements of the middle line
	&:before,
	&:after {
		@include navicon-line;
		position: absolute;
		left: 0;
		content: '';
		-webkit-transform-origin: $button-size/14 center;
		transform-origin: $button-size/14 center;
	}
	&:before { top: $button-size/4; }
	&:after { top: -$button-size/4; }
}
.navicon-lines-button:hover {
	opacity: 1;
	.navicon-lines {
		&:before { top: $button-size/3.5; }
		&:after { top: -$button-size/3.5; }
	}
}
.navicon-lines-button.x.active .navicon-lines {
	// hide the middle line
	background: transparent;
	// overlap the lines by setting both their top values to 0
	&:before,
	&:after {
		-webkit-transform-origin: 50% 50%;
		transform-origin: 50% 50%;
		top: 0;
		width: $button-size;
	}
	// rotate the lines to form the x shape
	&:before {
		-webkit-transform: rotate3d(0,0,1,45deg);
		transform: rotate3d(0,0,1,45deg);
	}
	&:after {
		-webkit-transform: rotate3d(0,0,1,-45deg);
		transform: rotate3d(0,0,1,-45deg);
	}
}
// Style the toggle menu link and hide it
.nav .navtoogle {	
	@include font-rem(18);
	font-weight: normal;
	background-color: $black;
	color: $white;	
	border: none;
	cursor: pointer;
	@media #{$small} {
		display: none;
	}
}
.nav button {
	border: none;
	background: none;
}
.navtoogle i {
	z-index:-1;
}
.icon-menu {
	position: relative;
	top: 3px;
	line-height: 0;
}
// When JavaScript is disabled, we hide the toggle button
.no-js .nav .navtoggle {
	display: none;
}
// When JavaScript is disabled, we show the menu
.no-js .nav ul {
	max-height: 30em;
	overflow: hidden;
}
// When JavaScript is enabled, we hide the menu
.js .nav ul {
	max-height: 0;
	overflow: hidden;
	@media #{$small} {
		max-height: 30em;
	}
}
// Displaying the menu when the user has clicked on the button
.js .nav .active + ul {		
	max-height: 30em;
	overflow: hidden;
	-webkit-transition: max-height .4s;
	-moz-transition: max-height .4s;
	-o-transition: max-height .4s;
	-ms-transition: max-height .4s;
	transition: max-height .4s;
}

/* Main content */
#main {
	counter-reset: captions;
	@include container;
	@include clearfix;
	clear: both;
	margin-top: 2em;
	h1 {
		margin-top: 0;
	}
	.post,
	.page {
		@include container;
		@include grid(12,10);
		@include prefix(12,1);
		@include suffix(12,1);
		margin-bottom: 2em;
		@media #{$small} {
			@include grid(12,6);
			@include prefix(12,0);
			@include suffix(12,0);
		}
		@media #{$x-large} {
			@include grid(12,6);
		}
	}
}

/* Index listing specific styling */
#index {
	@include container;
	@include grid(12,10);
	@include prefix(12,1);
	@include suffix(12,1);
	margin-bottom: 2em;
	@media #{$small} {
		@include grid(12,6);
		@include prefix(12,0);
		@include suffix(12,0);
	}
	@media #{$x-large} {
		@include grid(12,4.5);
	}
	h3 {
		margin: 0;
		padding-bottom: .5em;
		@include font-rem(28);
		border-bottom: 1px solid lighten($black,70);
	}
	article {
		h2 {
			margin-bottom: 4px;
			@include font-rem(20);
			&.link-post {
				margin-bottom: 0px + $doc-line-height;
				margin-bottom: 0rem + ($doc-line-height / $doc-font-size);
			}
		}
		p {
			@include font-rem(14);
		}
		p+p {
			text-indent: 0;
		}
	}
}
/* ... */

